2002-08-05  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* statistics/base/mean.m: Allow empty matrices.
	Handle DIM arg.

2002-08-05  Teemu Ikonen <tpikonen@pcu.helsinki.fi>

	* plot/__errcomm__.m: If format is not specified, default to error
	bar format.

2002-08-01  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/popen2.m: Use F_SETFL and O_NONBLOCK, not
	__F_SETFL__ and __O_NONBLOCK__.

	* image/saveimage.m: Use OCTAVE_VERSION, not __OCTAVE_VERSION__.
	* miscellaneous/bug_report.m: Likewise.

2002-07-25  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/mod.m: Use isreal (x), not any (any (imag (x))).
	* general/rem.m: Likewise.

	* plot/loglogerr.m: Use varargin instead of old style varargs.
	* plot/semilogxerr.m: Likewise.
	* plot/semilogyerr.m: Likewise.

2002-07-25  Teemu Ikonen <tpikonen@pcu.helsinki.fi>

	* plot/__errcomm__.m: New file.  Common functionality for error plots.
	* plot/loglogerr.m: New file.  Double logarithm plots with errorbars.
	* plot/semilogxerr.m: New file.  Semilogarithm plots with errorbars.
	* plot/semilogyerr.m: New file.  Semilogarithm plots with errorbars

	* plot/errorbar.m: Use __errcomm__.m.
	* plot/__errplot__.m: Minor cleanups.
	* plot/__pltopt__.m: Handle boxxyerrorbars plot style. 
	* plot/__pltopt1__.m: Likewise.

2002-07-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/rem.m: Delete redundant call to usage.

	* general/mod.m: Additional error checks, Texinfoize doc string.

2002-04-29  Paul Kienzle <pkienzle@users.sf.net>

	* general/mod.m: New function.

2002-07-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* control/system/sysmult.m: Use varargin instead of old style varargs.
	* control/system/sysadd.m: Likewise.
	* control/system/sysgroup.m: Likewise.
	* control/system/syssub.m: Likewise.
	* elfun/gcd.m: Likewise.
	* elfun/lcm.m: Likewise.
	* general/common_size.m: Likewise.
	* io/printf.m: Likewise.
	* miscellaneous/menu.m: Likewise.
	* miscellaneous/path.m: Likewise.
	* plot/__errplot__.m: Likewise.