@@ -1,3 +1,10 @@
+2002-08-09  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* general/isscalar.m: Rename from is_scalar.m.
+	* general/issquare.m: Rename from is_square.m.
+	* general/issymmetric.m: Rename from is_symmetric.m.
+	* general/isvector.m: Rename from is_vector.m.
+
 2002-08-05  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* statistics/base/mean.m: Allow empty matrices.
